Fixed up some styling and alignment Set the overall margin from the edge of the modal to be 25px

--- a/src/components/Discount.css
+++ b/src/components/Discount.css
@@ -5,7 +5,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   .discount-text-wrapper {
-    margin-left: 100px;
+    margin-left: 25px;
     .discount {
       display: flex;
       flex-direction: row;
