--- a/src/components/ModalFooter.css
+++ b/src/components/ModalFooter.css
@@ -3,5 +3,5 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 32px;
+  padding: 25px;
 }
