--- a/src/components/ModalHeader.css
+++ b/src/components/ModalHeader.css
@@ -1,3 +1,3 @@
 .modal-header {
-  padding: 32px;
+  padding: 25px;
 }
